// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleBoxGroup renders default 1`] = `
.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-3,
.emotion-3 > * {
  height: 100%;
}

.emotion-6 > * {
  height: 100%;
}

.emotion-21 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  height: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
}

.emotion-21 > div {
  width: auto;
}

.emotion-21 > *:not(:first-child) {
  padding-left: 16px;
  padding-top: 0;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-5 > * {
  height: 100%;
}

.emotion-4 {
  display: block;
}

.emotion-2 {
  background-color: var(--themeBgPrimary,#FFFFFF);
  box-shadow: 0 0 0 1px var(--themeBorder,#DADDE2);
  border-radius: 6px;
  cursor: pointer;
}

.emotion-2 > div {
  height: 100%;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:focus-within {
  box-shadow: 0 0 0 1px var(--themeBrandPrimary,#7D58FF);
  outline: 0;
}

.emotion-2:active {
  box-shadow: 0 0 0 2px var(--themeBrandPrimary,#7D58FF);
}

.emotion-1 {
  padding: 16px;
}

<ToggleBoxGroup
  id="default"
>
  <Flex
    align="stretch"
    direction="row"
    gutterSize="m"
    justify="flex-start"
    wrap="nowrap"
  >
    <div
      className="emotion-21"
      data-cy="flex"
    >
      <FlexItem
        className="emotion-6"
        flex="grow"
        key="buttonWrapper-exosphere"
      >
        <div
          className="emotion-5"
          data-cy="flexItem"
        >
          <ToggleBox
            id="exosphere"
            isActive={false}
            key=".0"
            name="default"
            onChange={[Function]}
            type="radio"
            value="exosphere"
          >
            <ToggleWrapper
              disabled={false}
              id="exosphere"
              isActive={false}
              name="default"
              onChange={[Function]}
              type="radio"
              value="exosphere"
            >
              <label
                className="emotion-4"
                htmlFor="exosphere"
              >
                <input
                  aria-checked={false}
                  checked={false}
                  className="emotion-0"
                  data-cy="toggleWrapper-input"
                  disabled={false}
                  id="exosphere"
                  name="default"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="exosphere"
                />
                <div
                  className="emotion-3"
                >
                  <ButtonCard
                    disabled={false}
                    hasFocus={false}
                    isActive={false}
                    isInput={true}
                    paddingSize="m"
                  >
                    <div
                      className="emotion-2"
                      data-cy="buttonCard"
                    >
                      <div
                        className="emotion-1"
                      >
                        Exosphere
                      </div>
                    </div>
                  </ButtonCard>
                </div>
              </label>
            </ToggleWrapper>
          </ToggleBox>
        </div>
      </FlexItem>
      <FlexItem
        className="emotion-6"
        flex="grow"
        key="buttonWrapper-thermosphere"
      >
        <div
          className="emotion-5"
          data-cy="flexItem"
        >
          <ToggleBox
            id="thermosphere"
            isActive={false}
            key=".1"
            name="default"
            onChange={[Function]}
            type="radio"
            value="thermosphere"
          >
            <ToggleWrapper
              disabled={false}
              id="thermosphere"
              isActive={false}
              name="default"
              onChange={[Function]}
              type="radio"
              value="thermosphere"
            >
              <label
                className="emotion-4"
                htmlFor="thermosphere"
              >
                <input
                  aria-checked={false}
                  checked={false}
                  className="emotion-0"
                  data-cy="toggleWrapper-input"
                  disabled={false}
                  id="thermosphere"
                  name="default"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="thermosphere"
                />
                <div
                  className="emotion-3"
                >
                  <ButtonCard
                    disabled={false}
                    hasFocus={false}
                    isActive={false}
                    isInput={true}
                    paddingSize="m"
                  >
                    <div
                      className="emotion-2"
                      data-cy="buttonCard"
                    >
                      <div
                        className="emotion-1"
                      >
                        Thermosphere
                      </div>
                    </div>
                  </ButtonCard>
                </div>
              </label>
            </ToggleWrapper>
          </ToggleBox>
        </div>
      </FlexItem>
      <FlexItem
        className="emotion-6"
        flex="grow"
        key="buttonWrapper-mesosphere"
      >
        <div
          className="emotion-5"
          data-cy="flexItem"
        >
          <ToggleBox
            id="mesosphere"
            isActive={false}
            key=".2"
            name="default"
            onChange={[Function]}
            type="radio"
            value="mesosphere"
          >
            <ToggleWrapper
              disabled={false}
              id="mesosphere"
              isActive={false}
              name="default"
              onChange={[Function]}
              type="radio"
              value="mesosphere"
            >
              <label
                className="emotion-4"
                htmlFor="mesosphere"
              >
                <input
                  aria-checked={false}
                  checked={false}
                  className="emotion-0"
                  data-cy="toggleWrapper-input"
                  disabled={false}
                  id="mesosphere"
                  name="default"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="mesosphere"
                />
                <div
                  className="emotion-3"
                >
                  <ButtonCard
                    disabled={false}
                    hasFocus={false}
                    isActive={false}
                    isInput={true}
                    paddingSize="m"
                  >
                    <div
                      className="emotion-2"
                      data-cy="buttonCard"
                    >
                      <div
                        className="emotion-1"
                      >
                        Mesosphere
                      </div>
                    </div>
                  </ButtonCard>
                </div>
              </label>
            </ToggleWrapper>
          </ToggleBox>
        </div>
      </FlexItem>
    </div>
  </Flex>
</ToggleBoxGroup>
`;

exports[`ToggleBoxGroup renders with a label 1`] = `
.emotion-23 {
  border: 0;
  margin: 0;
  padding: 0;
}

.emotion-1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-4,
.emotion-4 > * {
  height: 100%;
}

.emotion-7 > * {
  height: 100%;
}

.emotion-22 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  height: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
}

.emotion-22 > div {
  width: auto;
}

.emotion-22 > *:not(:first-child) {
  padding-left: 16px;
  padding-top: 0;
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-6 > * {
  height: 100%;
}

.emotion-5 {
  display: block;
}

.emotion-3 {
  background-color: var(--themeBgPrimary,#FFFFFF);
  box-shadow: 0 0 0 1px var(--themeBorder,#DADDE2);
  border-radius: 6px;
  cursor: pointer;
}

.emotion-3 > div {
  height: 100%;
}

.emotion-3:hover,
.emotion-3:focus,
.emotion-3:focus-within {
  box-shadow: 0 0 0 1px var(--themeBrandPrimary,#7D58FF);
  outline: 0;
}

.emotion-3:active {
  box-shadow: 0 0 0 2px var(--themeBrandPrimary,#7D58FF);
}

.emotion-2 {
  padding: 16px;
}

.emotion-0 {
  padding: 0;
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

<ToggleBoxGroup
  id="default"
  label="Atmosphere layer"
>
  <fieldset
    className="emotion-23"
  >
    <legend
      className="emotion-0"
    >
      Atmosphere layer
    </legend>
    <Flex
      align="stretch"
      direction="row"
      gutterSize="m"
      justify="flex-start"
      wrap="nowrap"
    >
      <div
        className="emotion-22"
        data-cy="flex"
      >
        <FlexItem
          className="emotion-7"
          flex="grow"
          key="buttonWrapper-exosphere"
        >
          <div
            className="emotion-6"
            data-cy="flexItem"
          >
            <ToggleBox
              id="exosphere"
              isActive={false}
              key=".0"
              name="default"
              onChange={[Function]}
              type="radio"
              value="exosphere"
            >
              <ToggleWrapper
                disabled={false}
                id="exosphere"
                isActive={false}
                name="default"
                onChange={[Function]}
                type="radio"
                value="exosphere"
              >
                <label
                  className="emotion-5"
                  htmlFor="exosphere"
                >
                  <input
                    aria-checked={false}
                    checked={false}
                    className="emotion-1"
                    data-cy="toggleWrapper-input"
                    disabled={false}
                    id="exosphere"
                    name="default"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value="exosphere"
                  />
                  <div
                    className="emotion-4"
                  >
                    <ButtonCard
                      disabled={false}
                      hasFocus={false}
                      isActive={false}
                      isInput={true}
                      paddingSize="m"
                    >
                      <div
                        className="emotion-3"
                        data-cy="buttonCard"
                      >
                        <div
                          className="emotion-2"
                        >
                          Exosphere
                        </div>
                      </div>
                    </ButtonCard>
                  </div>
                </label>
              </ToggleWrapper>
            </ToggleBox>
          </div>
        </FlexItem>
        <FlexItem
          className="emotion-7"
          flex="grow"
          key="buttonWrapper-thermosphere"
        >
          <div
            className="emotion-6"
            data-cy="flexItem"
          >
            <ToggleBox
              id="thermosphere"
              isActive={false}
              key=".1"
              name="default"
              onChange={[Function]}
              type="radio"
              value="thermosphere"
            >
              <ToggleWrapper
                disabled={false}
                id="thermosphere"
                isActive={false}
                name="default"
                onChange={[Function]}
                type="radio"
                value="thermosphere"
              >
                <label
                  className="emotion-5"
                  htmlFor="thermosphere"
                >
                  <input
                    aria-checked={false}
                    checked={false}
                    className="emotion-1"
                    data-cy="toggleWrapper-input"
                    disabled={false}
                    id="thermosphere"
                    name="default"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value="thermosphere"
                  />
                  <div
                    className="emotion-4"
                  >
                    <ButtonCard
                      disabled={false}
                      hasFocus={false}
                      isActive={false}
                      isInput={true}
                      paddingSize="m"
                    >
                      <div
                        className="emotion-3"
                        data-cy="buttonCard"
                      >
                        <div
                          className="emotion-2"
                        >
                          Thermosphere
                        </div>
                      </div>
                    </ButtonCard>
                  </div>
                </label>
              </ToggleWrapper>
            </ToggleBox>
          </div>
        </FlexItem>
        <FlexItem
          className="emotion-7"
          flex="grow"
          key="buttonWrapper-mesosphere"
        >
          <div
            className="emotion-6"
            data-cy="flexItem"
          >
            <ToggleBox
              id="mesosphere"
              isActive={false}
              key=".2"
              name="default"
              onChange={[Function]}
              type="radio"
              value="mesosphere"
            >
              <ToggleWrapper
                disabled={false}
                id="mesosphere"
                isActive={false}
                name="default"
                onChange={[Function]}
                type="radio"
                value="mesosphere"
              >
                <label
                  className="emotion-5"
                  htmlFor="mesosphere"
                >
                  <input
                    aria-checked={false}
                    checked={false}
                    className="emotion-1"
                    data-cy="toggleWrapper-input"
                    disabled={false}
                    id="mesosphere"
                    name="default"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    type="radio"
                    value="mesosphere"
                  />
                  <div
                    className="emotion-4"
                  >
                    <ButtonCard
                      disabled={false}
                      hasFocus={false}
                      isActive={false}
                      isInput={true}
                      paddingSize="m"
                    >
                      <div
                        className="emotion-3"
                        data-cy="buttonCard"
                      >
                        <div
                          className="emotion-2"
                        >
                          Mesosphere
                        </div>
                      </div>
                    </ButtonCard>
                  </div>
                </label>
              </ToggleWrapper>
            </ToggleBox>
          </div>
        </FlexItem>
      </div>
    </Flex>
  </fieldset>
</ToggleBoxGroup>
`;

exports[`ToggleBoxGroup renders with a selected ToggleBox 1`] = `
.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-3,
.emotion-3 > * {
  height: 100%;
}

.emotion-6 > * {
  height: 100%;
}

.emotion-21 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  height: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
}

.emotion-21 > div {
  width: auto;
}

.emotion-21 > *:not(:first-child) {
  padding-left: 16px;
  padding-top: 0;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-5 > * {
  height: 100%;
}

.emotion-4 {
  display: block;
}

.emotion-2 {
  background-color: var(--themeBgPrimary,#FFFFFF);
  box-shadow: 0 0 0 1px var(--themeBorder,#DADDE2);
  border-radius: 6px;
  cursor: pointer;
}

.emotion-2 > div {
  height: 100%;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:focus-within {
  box-shadow: 0 0 0 1px var(--themeBrandPrimary,#7D58FF);
  outline: 0;
}

.emotion-2:active {
  box-shadow: 0 0 0 2px var(--themeBrandPrimary,#7D58FF);
}

.emotion-1 {
  padding: 16px;
}

.emotion-16 {
  background-color: var(--themeBgPrimary,#FFFFFF);
  box-shadow: 0 0 0 1px var(--themeBorder,#DADDE2);
  border-radius: 6px;
  cursor: pointer;
}

.emotion-16 > div {
  height: 100%;
}

.emotion-16:hover,
.emotion-16:focus,
.emotion-16:focus-within {
  box-shadow: 0 0 0 1px var(--themeBrandPrimary,#7D58FF);
  outline: 0;
}

.emotion-16:active {
  box-shadow: 0 0 0 2px var(--themeBrandPrimary,#7D58FF);
}

.emotion-16,
.emotion-16:hover,
.emotion-16:focus {
  box-shadow: 0 0 0 2px var(--themeBrandPrimary,#7D58FF);
}

.emotion-16:focus {
  background-color: var(--themeBgHover,#F7F8F9);
}

<ToggleBoxGroup
  id="selectedItems"
  selectedItems={
    Array [
      "mesosphere",
    ]
  }
>
  <Flex
    align="stretch"
    direction="row"
    gutterSize="m"
    justify="flex-start"
    wrap="nowrap"
  >
    <div
      className="emotion-21"
      data-cy="flex"
    >
      <FlexItem
        className="emotion-6"
        flex="grow"
        key="buttonWrapper-exosphere"
      >
        <div
          className="emotion-5"
          data-cy="flexItem"
        >
          <ToggleBox
            id="exosphere"
            isActive={false}
            key=".0"
            name="selectedItems"
            onChange={[Function]}
            type="radio"
            value="exosphere"
          >
            <ToggleWrapper
              disabled={false}
              id="exosphere"
              isActive={false}
              name="selectedItems"
              onChange={[Function]}
              type="radio"
              value="exosphere"
            >
              <label
                className="emotion-4"
                htmlFor="exosphere"
              >
                <input
                  aria-checked={false}
                  checked={false}
                  className="emotion-0"
                  data-cy="toggleWrapper-input"
                  disabled={false}
                  id="exosphere"
                  name="selectedItems"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="exosphere"
                />
                <div
                  className="emotion-3"
                >
                  <ButtonCard
                    disabled={false}
                    hasFocus={false}
                    isActive={false}
                    isInput={true}
                    paddingSize="m"
                  >
                    <div
                      className="emotion-2"
                      data-cy="buttonCard"
                    >
                      <div
                        className="emotion-1"
                      >
                        Exosphere
                      </div>
                    </div>
                  </ButtonCard>
                </div>
              </label>
            </ToggleWrapper>
          </ToggleBox>
        </div>
      </FlexItem>
      <FlexItem
        className="emotion-6"
        flex="grow"
        key="buttonWrapper-thermosphere"
      >
        <div
          className="emotion-5"
          data-cy="flexItem"
        >
          <ToggleBox
            id="thermosphere"
            isActive={false}
            key=".1"
            name="selectedItems"
            onChange={[Function]}
            type="radio"
            value="thermosphere"
          >
            <ToggleWrapper
              disabled={false}
              id="thermosphere"
              isActive={false}
              name="selectedItems"
              onChange={[Function]}
              type="radio"
              value="thermosphere"
            >
              <label
                className="emotion-4"
                htmlFor="thermosphere"
              >
                <input
                  aria-checked={false}
                  checked={false}
                  className="emotion-0"
                  data-cy="toggleWrapper-input"
                  disabled={false}
                  id="thermosphere"
                  name="selectedItems"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="thermosphere"
                />
                <div
                  className="emotion-3"
                >
                  <ButtonCard
                    disabled={false}
                    hasFocus={false}
                    isActive={false}
                    isInput={true}
                    paddingSize="m"
                  >
                    <div
                      className="emotion-2"
                      data-cy="buttonCard"
                    >
                      <div
                        className="emotion-1"
                      >
                        Thermosphere
                      </div>
                    </div>
                  </ButtonCard>
                </div>
              </label>
            </ToggleWrapper>
          </ToggleBox>
        </div>
      </FlexItem>
      <FlexItem
        className="emotion-6"
        flex="grow"
        key="buttonWrapper-mesosphere"
      >
        <div
          className="emotion-5"
          data-cy="flexItem"
        >
          <ToggleBox
            id="mesosphere"
            isActive={true}
            key=".2"
            name="selectedItems"
            onChange={[Function]}
            type="radio"
            value="mesosphere"
          >
            <ToggleWrapper
              disabled={false}
              id="mesosphere"
              isActive={true}
              name="selectedItems"
              onChange={[Function]}
              type="radio"
              value="mesosphere"
            >
              <label
                className="emotion-4"
                htmlFor="mesosphere"
              >
                <input
                  aria-checked={true}
                  checked={true}
                  className="emotion-0"
                  data-cy="toggleWrapper-input"
                  disabled={false}
                  id="mesosphere"
                  name="selectedItems"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="mesosphere"
                />
                <div
                  className="emotion-3"
                >
                  <ButtonCard
                    disabled={false}
                    hasFocus={false}
                    isActive={true}
                    isInput={true}
                    paddingSize="m"
                  >
                    <div
                      className="emotion-16"
                      data-cy="buttonCard"
                    >
                      <div
                        className="emotion-1"
                      >
                        Mesosphere
                      </div>
                    </div>
                  </ButtonCard>
                </div>
              </label>
            </ToggleWrapper>
          </ToggleBox>
        </div>
      </FlexItem>
    </div>
  </Flex>
</ToggleBoxGroup>
`;

exports[`ToggleBoxGroup renders with custom direction and gutter size 1`] = `
.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-3,
.emotion-3 > * {
  height: 100%;
}

.emotion-6 > * {
  height: 100%;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-5 > * {
  height: 100%;
}

.emotion-4 {
  display: block;
}

.emotion-2 {
  background-color: var(--themeBgPrimary,#FFFFFF);
  box-shadow: 0 0 0 1px var(--themeBorder,#DADDE2);
  border-radius: 6px;
  cursor: pointer;
}

.emotion-2 > div {
  height: 100%;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:focus-within {
  box-shadow: 0 0 0 1px var(--themeBrandPrimary,#7D58FF);
  outline: 0;
}

.emotion-2:active {
  box-shadow: 0 0 0 2px var(--themeBrandPrimary,#7D58FF);
}

.emotion-1 {
  padding: 16px;
}

.emotion-21 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
}

.emotion-21 > div {
  width: 100%;
}

.emotion-21 > *:not(:first-child) {
  padding-left: 0;
  padding-top: 48px;
}

<ToggleBoxGroup
  direction="column"
  gutterSize="xxl"
  id="customLayoutProps"
>
  <Flex
    align="stretch"
    direction="column"
    gutterSize="xxl"
    justify="flex-start"
    wrap="nowrap"
  >
    <div
      className="emotion-21"
      data-cy="flex"
    >
      <FlexItem
        className="emotion-6"
        flex="grow"
        key="buttonWrapper-exosphere"
      >
        <div
          className="emotion-5"
          data-cy="flexItem"
        >
          <ToggleBox
            id="exosphere"
            isActive={false}
            key=".0"
            name="customLayoutProps"
            onChange={[Function]}
            type="radio"
            value="exosphere"
          >
            <ToggleWrapper
              disabled={false}
              id="exosphere"
              isActive={false}
              name="customLayoutProps"
              onChange={[Function]}
              type="radio"
              value="exosphere"
            >
              <label
                className="emotion-4"
                htmlFor="exosphere"
              >
                <input
                  aria-checked={false}
                  checked={false}
                  className="emotion-0"
                  data-cy="toggleWrapper-input"
                  disabled={false}
                  id="exosphere"
                  name="customLayoutProps"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="exosphere"
                />
                <div
                  className="emotion-3"
                >
                  <ButtonCard
                    disabled={false}
                    hasFocus={false}
                    isActive={false}
                    isInput={true}
                    paddingSize="m"
                  >
                    <div
                      className="emotion-2"
                      data-cy="buttonCard"
                    >
                      <div
                        className="emotion-1"
                      >
                        Exosphere
                      </div>
                    </div>
                  </ButtonCard>
                </div>
              </label>
            </ToggleWrapper>
          </ToggleBox>
        </div>
      </FlexItem>
      <FlexItem
        className="emotion-6"
        flex="grow"
        key="buttonWrapper-thermosphere"
      >
        <div
          className="emotion-5"
          data-cy="flexItem"
        >
          <ToggleBox
            id="thermosphere"
            isActive={false}
            key=".1"
            name="customLayoutProps"
            onChange={[Function]}
            type="radio"
            value="thermosphere"
          >
            <ToggleWrapper
              disabled={false}
              id="thermosphere"
              isActive={false}
              name="customLayoutProps"
              onChange={[Function]}
              type="radio"
              value="thermosphere"
            >
              <label
                className="emotion-4"
                htmlFor="thermosphere"
              >
                <input
                  aria-checked={false}
                  checked={false}
                  className="emotion-0"
                  data-cy="toggleWrapper-input"
                  disabled={false}
                  id="thermosphere"
                  name="customLayoutProps"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="thermosphere"
                />
                <div
                  className="emotion-3"
                >
                  <ButtonCard
                    disabled={false}
                    hasFocus={false}
                    isActive={false}
                    isInput={true}
                    paddingSize="m"
                  >
                    <div
                      className="emotion-2"
                      data-cy="buttonCard"
                    >
                      <div
                        className="emotion-1"
                      >
                        Thermosphere
                      </div>
                    </div>
                  </ButtonCard>
                </div>
              </label>
            </ToggleWrapper>
          </ToggleBox>
        </div>
      </FlexItem>
      <FlexItem
        className="emotion-6"
        flex="grow"
        key="buttonWrapper-mesosphere"
      >
        <div
          className="emotion-5"
          data-cy="flexItem"
        >
          <ToggleBox
            id="mesosphere"
            isActive={false}
            key=".2"
            name="customLayoutProps"
            onChange={[Function]}
            type="radio"
            value="mesosphere"
          >
            <ToggleWrapper
              disabled={false}
              id="mesosphere"
              isActive={false}
              name="customLayoutProps"
              onChange={[Function]}
              type="radio"
              value="mesosphere"
            >
              <label
                className="emotion-4"
                htmlFor="mesosphere"
              >
                <input
                  aria-checked={false}
                  checked={false}
                  className="emotion-0"
                  data-cy="toggleWrapper-input"
                  disabled={false}
                  id="mesosphere"
                  name="customLayoutProps"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="mesosphere"
                />
                <div
                  className="emotion-3"
                >
                  <ButtonCard
                    disabled={false}
                    hasFocus={false}
                    isActive={false}
                    isInput={true}
                    paddingSize="m"
                  >
                    <div
                      className="emotion-2"
                      data-cy="buttonCard"
                    >
                      <div
                        className="emotion-1"
                      >
                        Mesosphere
                      </div>
                    </div>
                  </ButtonCard>
                </div>
              </label>
            </ToggleWrapper>
          </ToggleBox>
        </div>
      </FlexItem>
    </div>
  </Flex>
</ToggleBoxGroup>
`;
